# huahua-discord

./: .gitignore  Cargo.toml  docker-compose.yml
bot/: Cargo.toml
bot/src/: main.rs
fxutil/: Cargo.toml
fxutil/src/: main.rs
hualib/: Cargo.toml
hualib/src/: audio.rs  bot.rs  commands.rs  config.rs  db.rs  discord.rs  fx.rs  interactions.rs  ioutils.rs  lib.rs  music.rs
hualib/src/interactions/: create_fx.rs  data.rs  mod.rs
src/: audio.rs  bot.rs  config.rs  discord.rs  fx.rs  ioutils.rs  lib.rs  log.rs  main.rs  music.rs
src/interactions/: fx.rs  mod.rs
