[package]
name = "huahua-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", features = ["voice"]}
tokio = { version = "1", features = ["full"]}
async-trait = "0.1.52"
songbird = "0.2.2"