[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hualib = {path = "../hualib"}
tokio = { version = "1", features = ["full"]}
async-trait = "0.1.52"
log = "0.4.14"
env_logger = "0.9.0"
mongodb = "2.1.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch="next"
features = ["voice", "unstable_discord_api"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch="next"