[package]
name = "hualib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
async-trait = "0.1.52"
log = "0.4.14"
serde = {version = "1.0.136", features = ["derive"]}
toml = "0.5.8"
mongodb = "2.1.0"
rodio = "0.15.0"
md5 = "0.7.0"
futures = "0.3.21"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch="next"
features = ["voice", "unstable_discord_api"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch="next"

[dependencies.poise]
git = "https://github.com/kangalioo/poise.git"
branch = "master"